move to java8 base64